--- a/_posts/2020-06-21-example.md
+++ b/_posts/2020-06-21-example.md
@@ -9,8 +9,10 @@ published: true
 
 Here are some words. And this is some math:
 
+{% katexmm %}
 $$
 e = mc^2. \tag{1}
 $$
+{% endkatexmm %}
 
 Cool!
