--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -9,3 +9,18 @@ References
   year={2006},
   publisher={Springer}
 }
+
+@article{shewchuk1994introduction,
+  title={An introduction to the conjugate gradient method without the agonizing pain},
+  author={Shewchuk, Jonathan Richard and others},
+  year={1994},
+  publisher={Carnegie-Mellon University. Department of Computer Science Pittsburgh}
+}
+
+
+@book{kelley1995iterative,
+  title={Iterative methods for linear and nonlinear equations},
+  author={Kelley, Carl T},
+  year={1995},
+  publisher={SIAM}
+}
