--- a/_posts/2025-10-13-CGM.md
+++ b/_posts/2025-10-13-CGM.md
@@ -55,6 +55,6 @@ Note ${\mathbf A}$ is s.p.d. and then $f({\mathbf x}) \geq f({\mathbf x}^*)$ for
 ## 2. Conjugate Direction method (CD)
 
 
-From the above preliminaries, we know that ${\mathbf x}_{t+1} = {\mathbf x}_t + \alpha_t {\mathbf r}_t$ may not be the optimal way to update $\{{\mathbf x}_t\}$ as it often finds itself taking steps in the same direction as earlier steps. From {% cite shewchuk1994introduction  %}: 
+From the above preliminaries, we know that ${\mathbf x}_{t+1} = {\mathbf x}_{t} + \alpha_t {\mathbf r}_t$ may not be the optimal way to update $\{{\mathbf x}_t\}$ as it often finds itself taking steps in the same direction as earlier steps. From {% cite shewchuk1994introduction  %}: 
 
 >Wouldn't it be better if, every time we took a step, we got it right the first time? Here's an idea: pick a set of orthogonal search directions ${\mathbf d}_{0:n-1}$. In each search direction, we'll take exactly one step, and that step will be just the right length to line up evenly with ${\mathbf x}$. After at most $n$ steps, we'll be done.
