--- a/_posts/2025-10-13-CGM.md
+++ b/_posts/2025-10-13-CGM.md
@@ -50,11 +50,11 @@ Note ${\mathbf A}$ is s.p.d. and then $f({\mathbf x}) \geq f({\mathbf x}^*)$ for
 >$$
 >The SD method needs at most ${\mathcal O}(\kappa({\mathbf A}) \log1/\epsilon)$ iterations for achieving $\|{\mathbf e}_t\|_{\mathbf A} \leq \epsilon$.
 
->Remark: Essentially, SD chooses $\alpha_t$ such that the following search directions (i.e., the gradient) are orthogonal to the previous one $\langle {\mathbf r}_t, {\mathbf r}_{t+1} \rangle = 0$ and $f({\mathbf x}_{t+1})$ is minimized per-iteration. We do not know exactly how many steps it will use to find ${\mathbf x}^*$, especially when $\kappa({\mathbf A})$ is large. The natural question is whether there is a better way to choose $\alpha_t$ and searching directions (other than gradients) so that ${\|{\mathbf e}_t\|}_{{\mathbf A}}$ is minimized (not $f({\mathbf x}_{t+1})$ at per-iteration) and can finish in at most $n$ iterations. The conjugate direction method serves as a general approach, with the conjugate gradient method (CGM) being a more efficient and specialized variant of it.
+>Remark: Essentially, SD chooses $\alpha_t$ such that the following search directions (i.e., the gradient) are orthogonal to the previous one $\langle {\mathbf r}_{t}, {\mathbf r}_{t+1} \rangle = 0$ and $f({\mathbf x}_{t+1})$ is minimized per-iteration. We do not know exactly how many steps it will use to find ${\mathbf x}^*$, especially when $\kappa({\mathbf A})$ is large. The natural question is whether there is a better way to choose $\alpha_t$ and searching directions (other than gradients) so that ${\|{\mathbf e}_t\|}_{{\mathbf A}}$ is minimized (not $f({\mathbf x}_{t+1})$ at per-iteration) and can finish in at most $n$ iterations. The conjugate direction method serves as a general approach, with the conjugate gradient method (CGM) being a more efficient and specialized variant of it.
 
 ## 2. Conjugate Direction method (CD)
 
 
-From the above preliminaries, we know that ${{\mathbf x}}_{t+1} = {\mathbf x}_{t} + \alpha_t {\mathbf r}_{t}$ may not be the optimal way to update $\{{\mathbf x}_{t}\}$ as it often finds itself taking steps in the same direction as earlier steps. From {% cite shewchuk1994introduction  %}: 
+From the above preliminaries, we know that ${{\mathbf x}}_{t+1} = {\mathbf x}_{t} + \alpha_t {{\mathbf r}}_{t}$ may not be the optimal way to update $\{{\mathbf x}_{t}\}$ as it often finds itself taking steps in the same direction as earlier steps. From {% cite shewchuk1994introduction  %}: 
 
 >Wouldn't it be better if, every time we took a step, we got it right the first time? Here's an idea: pick a set of orthogonal search directions ${{\mathbf d}}_{0:n-1}$. In each search direction, we'll take exactly one step, and that step will be just the right length to line up evenly with ${{\mathbf x}}$. After at most $n$ steps, we'll be done.
