--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -24,3 +24,14 @@ References
   year={1995},
   publisher={SIAM}
 }
+
+@article{hinton2006reducing,
+  title={Reducing the dimensionality of data with neural networks},
+  author={Hinton, Geoffrey E and Salakhutdinov, Ruslan R},
+  journal={science},
+  volume={313},
+  number={5786},
+  pages={504--507},
+  year={2006},
+  publisher={American Association for the Advancement of Science}
+}
