--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -35,3 +35,11 @@ References
   year={2006},
   publisher={American Association for the Advancement of Science}
 }
+
+@inproceedings{vincent2008extracting,
+  title={Extracting and composing robust features with denoising autoencoders},
+  author={Vincent, Pascal and Larochelle, Hugo and Bengio, Yoshua and Manzagol, Pierre-Antoine},
+  booktitle={Proceedings of the 25th international conference on Machine learning},
+  pages={1096--1103},
+  year={2008}
+}
